other/add-daemonset-tolerations/.kyverno-test/resources.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: nvidia-vgpu-device-manager
  namespace: default
  name: nvidia-vgpu-device-manager
  annotations:
    openshift.io/scc: nvidia-vgpu-device-manager
spec:
  selector:
    matchLabels:
      app: nvidia-vgpu-device-manager
  template:
    metadata:
      labels:
        app: nvidia-vgpu-device-manager
    spec:
      nodeSelector:
        nvidia.com/gpu.deploy.vgpu-device-manager: "true"
      serviceAccountName: nvidia-vgpu-device-manager
      initContainers:
        - name: vgpu-manager-validation
          image: "registry.k8s.io/pause:3.10"
          command: ['sh', '-c']
          # TODO: Account for pre-installed vGPU Manager. Currently validator
          # creates a different status file when driver is pre-installed.
          args: ["until [ -f /run/nvidia/validations/vgpu-manager-ready ]; do echo waiting for NVIDIA vGPU Manager to be setup; sleep 5; done"]
          securityContext:
            privileged: true
          volumeMounts:
            - name: run-nvidia-validations
              mountPath: /run/nvidia/validations
              mountPropagation: Bidirectional
      containers:
      - name: nvidia-vgpu-device-manager
        image: "registry.k8s.io/pause:3.10"
        imagePullPolicy: IfNotPresent
        env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: CONFIG_FILE
          value: "/vgpu-config/config.yaml"
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /vgpu-config
          name: vgpu-config
        - mountPath: /sys
          name: host-sys
        - mountPath: /host
          name: host-root
          mountPropagation: HostToContainer
        - name: driver-install-dir
          mountPath: /driver-root
          mountPropagation: HostToContainer
      volumes:
      - name: vgpu-config
        configMap:
          name: default
      - name: host-sys
        hostPath:
          path: /sys
          type: Directory
      - name: host-root
        hostPath:
          path: "/"
      - name: driver-install-dir
        hostPath:
          path: "/run/nvidia/driver"
          type: DirectoryOrCreate
      - name: run-nvidia-validations
        hostPath:
          path: /run/nvidia/validations
          type: DirectoryOrCreate
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: nvidia-device-plugin-daemonset
  name: nvidia-device-plugin-daemonset
  namespace: default
  annotations:
    openshift.io/scc: hostmount-anyuid
spec:
  selector:
    matchLabels:
      app: nvidia-device-plugin-daemonset
  template:
    metadata:
      labels:
        app: nvidia-device-plugin-daemonset
    spec:
      nodeSelector:
        nvidia.com/gpu.deploy.device-plugin: "true"
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      priorityClassName: system-node-critical
      serviceAccountName: nvidia-device-plugin
      initContainers:
      - image: "registry.k8s.io/pause:3.10"
        name: toolkit-validation
        command: ['sh', '-c']
        args: ["until [ -f /run/nvidia/validations/toolkit-ready ]; do echo waiting for nvidia container stack to be setup; sleep 5; done"]
        securityContext:
          privileged: true
        volumeMounts:
          - name: run-nvidia-validations
            mountPath: /run/nvidia/validations
            mountPropagation: HostToContainer
      - image: "registry.k8s.io/pause:3.10"
        name: config-manager-init
        command: ["config-manager"]
        env:
        - name: ONESHOT
          value: "true"
        - name: KUBECONFIG
          value: ""
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: "spec.nodeName"
        - name: NODE_LABEL
          value: "nvidia.com/device-plugin.config"
        - name: CONFIG_FILE_SRCDIR
          value: "/available-configs"
        - name: CONFIG_FILE_DST
          value: "/config/config.yaml"
        - name: DEFAULT_CONFIG
          value: ""
        - name: SEND_SIGNAL
          value: "false"
        - name: SIGNAL
          value: ""
        - name: PROCESS_TO_SIGNAL
          value: ""
      containers:
      - image: "registry.k8s.io/pause:3.10"
        name: nvidia-device-plugin
        command: ["/bin/sh", "-c"]
        args:
          - /bin/entrypoint.sh
        securityContext:
          privileged: true
        env:
          - name: PASS_DEVICE_SPECS
            value: "true"
          - name: FAIL_ON_INIT_ERROR
            value: "true"
          - name: DEVICE_LIST_STRATEGY
            value: envvar
          - name: DEVICE_ID_STRATEGY
            value: uuid
          - name: NVIDIA_VISIBLE_DEVICES
            value: all
          - name: NVIDIA_DRIVER_CAPABILITIES
            value: all
          - name: MPS_ROOT
            value: /run/nvidia/mps
        volumeMounts:
          - name: nvidia-device-plugin-entrypoint
            readOnly: true
            mountPath: /bin/entrypoint.sh
            subPath: entrypoint.sh
          - name: device-plugin
            mountPath: /var/lib/kubelet/device-plugins
          - name: run-nvidia-validations
            mountPath: /run/nvidia/validations
          - name: driver-install-dir
            mountPath: /driver-root
            mountPropagation: HostToContainer
          - name: host-root
            mountPath: /host
            readOnly: true
            mountPropagation: HostToContainer
          - name: cdi-root
            mountPath: /var/run/cdi
          # The MPS /dev/shm is needed to allow for MPS daemon health-checking.
          - name: mps-shm
            mountPath: /dev/shm
          - name: mps-root
            mountPath: /mps
      - image: "registry.k8s.io/pause:3.10"
        name: config-manager
        command: ["config-manager"]
        securityContext:
          privileged: true
        env:
        - name: ONESHOT
          value: "false"
        - name: KUBECONFIG
          value: ""
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: "spec.nodeName"
        - name: NODE_LABEL
          value: "nvidia.com/device-plugin.config"
        - name: CONFIG_FILE_SRCDIR
          value: "/available-configs"
        - name: CONFIG_FILE_DST
          value: "/config/config.yaml"
        - name: DEFAULT_CONFIG
          value: ""
        - name: SEND_SIGNAL
          value: "true"
        - name: SIGNAL
          value: "1" # SIGHUP
        - name: PROCESS_TO_SIGNAL
          value: "nvidia-device-plugin"
      volumes:
        - name: nvidia-device-plugin-entrypoint
          configMap:
            name: nvidia-device-plugin-entrypoint
            defaultMode: 448
        - name: device-plugin
          hostPath:
            path: /var/lib/kubelet/device-plugins
        - name: run-nvidia-validations
          hostPath:
            path: "/run/nvidia/validations"
            type: DirectoryOrCreate
        - name: driver-install-dir
          hostPath:
            path: "/run/nvidia/driver"
            type: DirectoryOrCreate
        - name: host-root
          hostPath:
            path: /
        - name: cdi-root
          hostPath:
            path: /var/run/cdi
            type: DirectoryOrCreate
        - name: mps-root
          hostPath:
            path: /run/nvidia/mps
            type: DirectoryOrCreate
        - name: mps-shm
          hostPath:
            path: /run/nvidia/mps/shm
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: sriov-network-metrics-exporter
  name: sriov-network-metrics-exporter
  namespace: default
spec:
  selector:
    matchLabels:
      app: sriov-network-metrics-exporter
  template:
    metadata:
      labels:
        app: sriov-network-metrics-exporter
    spec:
      hostNetwork: true
      serviceAccountName: metrics-exporter-sa
      nodeSelector:
        kubernetes.io/os: linux
        node-role.kubernetes.io/worker: ""
      containers:
      - name: metrics-exporter
        image: metrics-exporter:latest
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sriov-network-config-daemon
  namespace: default
spec:
  selector:
    matchLabels:
      app: sriov-network-config-daemon
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: sriov-network-config-daemon
    spec:
      hostNetwork: true
      hostPID: true
      nodeSelector:
        kubernetes.io/os: linux
        node-role.kubernetes.io/worker: ""
      tolerations:
      - operator: Exists
      serviceAccountName: sriov-network-config-daemon
      priorityClassName: "system-node-critical"
      containers:
      - name: sriov-network-config-daemon
        image: sriov-network-config-daemon:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-multus-ds
  namespace: kube-system
  labels:
    tier: node
    app: multus
    name: multus
spec:
  selector:
    matchLabels:
      name: multus
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        tier: node
        app: multus
        name: multus
    spec:
      hostNetwork: true
      tolerations:
      - operator: Exists
        effect: NoSchedule
      - operator: Exists
        effect: NoExecute
      serviceAccountName: multus
      containers:
      - name: kube-multus
        image: registry.k8s.io/pause:3.10
        command:
        - /thin_entrypoint
        args:
        - --multus-conf-file=auto
        - --multus-autoconfig-dir=/host/etc/cni/net.d
        - --cni-conf-dir=/host/etc/cni/net.d
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        securityContext:
          privileged: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: cni
          mountPath: /host/etc/cni/net.d
        - name: cnibin
          mountPath: /host/opt/cni/bin
        - name: multus-cfg
          mountPath: /tmp/multus-conf
      initContainers:
      - name: install-multus-binary
        image: registry.k8s.io/pause:3.10
        command:
        - /install_multus
        args:
        - --type
        - thin
        resources:
          requests:
            cpu: 10m
            memory: 15Mi
        securityContext:
          privileged: true
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: cnibin
          mountPath: /host/opt/cni/bin
          mountPropagation: Bidirectional
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cni
        hostPath:
          path: /etc/cni/net.d
      - name: cnibin
        hostPath:
          path: /opt/cni/bin
      - name: multus-cfg
        configMap:
          name: multus-cni-config
          items:
          - key: cni-conf.json
            path: 70-multus.conf
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cni-plugins-ds
  namespace: default
  labels:
    tier: node
    app: cni-plugins
spec:
  selector:
    matchLabels:
      name: cni-plugins
  template:
    metadata:
      labels:
        name: cni-plugins
        tier: node
        app: cni-plugins
    spec:
      hostNetwork: true
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      containers:
        - name: cni-plugins
          image: "registry.k8s.io/pause:3.10"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "50Mi"
          volumeMounts:
            - name: cnibin
              mountPath: /host/opt/cni/bin
      volumes:
        - name: cnibin
          hostPath:
            path: /opt/cni/bin
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: rdma-shared-dp-ds
  namespace: default
spec:
  selector:
    matchLabels:
      app: rdma-shared-dp
  template:
    metadata:
      labels:
        app: rdma-shared-dp
    spec:
      priorityClassName: system-node-critical
      hostNetwork: true
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      containers:
      - image: "registry.k8s.io/pause:3.10"
        name: rdma-shared-dp
        command: [ "/bin/k8s-rdma-shared-dp" ]
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        volumeMounts:
          - name: device-plugin
            mountPath: /var/lib/kubelet/device-plugins
            readOnly: false
          - name: plugins-registry
            mountPath: /var/lib/kubelet/plugins_registry
            readOnly: false
          - name: devs
            mountPath: /dev/
      volumes:
        - name: device-plugin
          hostPath:
            path: /var/lib/kubelet/device-plugins
        - name: plugins-registry
          hostPath:
            path: /var/lib/kubelet/plugins_registry
        - name: devs
          hostPath:
            path: /dev/
      nodeSelector:
        feature.node.kubernetes.io/pci-15b3.present: "true"
        network.nvidia.com/operator.mofed.wait: "false"
